<resources>
    <string name="app_name">贝芽机器人</string>
    <string name="app_evn">dev</string>
    <string name="app_tel">400&#8211;876&#8211;9931</string>
    <string name="wx_app_id">wx19275a2c915b1992</string>
    <string name="app_wifi_disconnect">无网络</string>
    <string name="login_guide">父母永远是孩子最好的陪伴</string>
    <string name="main_bind_machine">新增设备</string>
    <string name="main_title">设备控制</string>
    <string name="add_machine">添加设备</string>
    <string name="wx_login">微信登录</string>
    <string name="scan_qc">扫一扫</string>
    <string name="bind_machine">绑定</string>
    <string name="input_machine_id_hint">输入设备ID，完成设备绑定</string>
    <string name="input_machine_toast">输入设备序列号</string>
    <string name="input_msg_hint">请输入要小贝说的话</string>
    <string name="machine_action">动作</string>
    <string name="machine_monitor">监护</string>
    <string name="machine_video">视频</string>
    <string name="machine_dance">跳舞</string>
    <string name="machine_state_getting">正在获取中</string>
    <string name="machine_state_inline">在线</string>
    <string name="machine_state_outline">离线</string>
    <string name="menu_manage">设备管理</string>
    <string name="menu_setting">系统设置</string>
    <string name="upgrade_loading">检测新版本中&#8230;</string>
    <string name="wifi_disconnect">当前无网络！</string>
    <string name="device_unbind_hint">确定要解除与\"%s\"的绑定？</string>
    <string name="device_exit">确定要退出帐号？</string>
    <string name="device_outline_toast">小贝未上线！</string>
    <string name="device_unbind">解绑</string>
    <string name="dialog_update_app">立即更新</string>
    <string name="dialog_cancel_update_app">取消更新</string>
    <string name="dialog_update_progress">更新进度%d</string>
    <string name="dialog_updating">正在更新</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="service_start_failed">服务启动失败，不支持此功能！</string>
    <string name="monitor_mode_toast">监护模式下，无法进行视频通话！</string>
    <string name="monitor_mode_toast1">监护模式下，无法进行语音通话！</string>
    <string name="main_device_hint_1">小宝贝，你睡着了吗？</string>
    <string name="main_device_hint_2">小宝贝，你现在乖不乖呢？</string>
    <string name="main_device_hint_3">小宝贝，你好好吃饭了吗?</string>
    <string name="main_device_hint_4">小宝贝，你又吵着不睡觉了吗？</string>
    <string name="main_device_hint_5">小宝贝，你又长高了吗？</string>
    <string name="main_device_hint_6">小宝贝，你又在发呆吗？</string>
    <string name="main_device_hint_7">小宝贝，你会数数了吗？</string>
    <string name="main_device_hint_8">小宝贝，我想你了。</string>
    <string name="get_product_code_failed">获取设备ID失败！</string>
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="next">下一步</string>
    <string name="input_pwd">请输入6&#8211;20位密码</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_code">输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="code">验证码</string>
    <string name="confirm">确定</string>
    <string name="setting">设置</string>
    <string name="versionCode">版本号</string>
    <string name="contactUs">联系我们</string>
    <string name="loginOut">退出登录</string>
    <string name="title_register">注册</string>
    <string name="title_forget_pwd">忘记密码</string>
    <string name="title_bind_mobile">绑定手机号</string>
    <string name="dad">爸爸</string>
    <string name="mom">妈妈</string>
    <string name="other">其他</string>
    <string name="babyNickName">宝宝昵称</string>
    <string name="birthday">出生日期</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="babyInfo">宝宝资料</string>
    <string name="title_setting">设置</string>
    <string name="title_habit">兴趣标签</string>
    <string name="no_setting">未设置</string>
    <string name="rabitName">机器人名字</string>
    <string name="birth">生日</string>
    <string name="whose_dad">他爸爸是谁</string>
    <string name="whose_mom">他妈妈是谁</string>
    <string name="device_setting">设备设置</string>
    <string name="edit">编辑</string>
    <string name="input">请输入...</string>
    <string name="my_baby_pre">我是宝宝的:</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="reget_after_seconds">秒后重新获取</string>
    <string name="input_correct_tel">请输入正确的手机号码</string>
    <string name="send_success">发送成功</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_to_bind_tip">您是第一次登陆，请先绑定手机号</string>
    <string name="bind_success">绑定成功</string>
    <string name="input_password">请输入密码</string>
    <string name="input_valid_code">请输入验证码</string>
    <string name="tel_error">手机号码错误</string>
    <string name="password_error">密码格式错误</string>
    <string name="not_install_wx">没有安装微信,请先安装微信!</string>
    <string name="permission_need">您需要授权此权限!</string>
    <string name="camera_permission">您需要授权摄像头权限才可以视频通话!</string>
    <string name="call_permission">您需要授权麦克权限才可以通话!</string>
    <string name="storage_permission">您需要授权读写权限才可以保存用户信息!</string>
    <string name="update_success">修改成功</string>
    <string name="save_success">保存成功</string>
    <string name="input_baby_name">请输入宝宝昵称</string>
    <string name="create_success">创建成功</string>
    <string name="habit_hint1">选择培训宝宝的兴趣</string>
    <string name="habit_hint2">贝芽将更好的为您的宝宝成长</string>
    <string name="select_time">选择时间</string>
    <string name="empty_device_hint">暂无设备</string>
    <string name="add_device_hint">点击右上角“+”新增设备</string>
    <string name="input_device_id">请输入设备ID!</string>
    <string name="control_expressions">表情</string>
    <string name="control_dance">舞蹈</string>
    <string name="control_monitor">监控</string>
    <string name="control_walls">文字</string>
    <string name="wakeup_walls">评估唤醒词</string>
    <string name="input_4">请输入4个字名称</string>
    <string name="wakeup_content">唤醒词:\n1、您可以使用自定义的唤醒词来唤醒设备\n2、音节覆盖尽量多，
    长度最好为4个音节；尽量覆盖多个不用音节，同事避免使用只有元音音节的字\n3、相似音节要规避，
    发音要清晰响亮\n4、不要使用家庭成员的名字，不然都不知道在喊谁呢</string>
    <string name="goto_wakeup">请前往设置唤醒词</string>
    <string name="skip">跳过</string>
    <string name="select_birthday">请选择宝宝生日</string>
    <string name="login_error_more">登入失败，请重新登录！</string>
    <string name="device_unbind_success">设备解绑成功</string>
</resources>
