<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="24dp"
        android:text="@string/input_machine_id_hint"/>

    <EditText
        android:id="@+id/et_machine_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColorHint="@color/colorGray"
        android:textColor="@color/colorBlack"
        android:background="@null"
        android:hint="@string/input_machine_toast"
        android:gravity="center"
        android:textSize="@dimen/activity_text_size"
        android:maxLines="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorGray"  />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/tv_scan_qc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="45dp"
            android:textSize="13sp"
            android:padding="5dp"
            android:text="@string/scan_qc"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_bind_machine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@mipmap/bind_parent"
        android:textSize="@dimen/activity_text_size"
        android:text="@string/bind_machine"
        android:gravity="center"/>
</LinearLayout>
