<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorWhite">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorBlack"
            android:background="@null"
            android:hint="@string/input_phone"
            android:textSize="@dimen/activity_text_size"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_text_size_small"
            android:text="@string/send_code"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray"  />

    <EditText
        android:id="@+id/et_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorBlack"
        android:background="@null"
        android:hint="@string/code"
        android:textSize="@dimen/activity_text_size"
        android:inputType="number"
        tools:ignore="TextFields" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorBlack"
        android:background="@null"
        android:hint="@string/confirm_pwd"
        android:textSize="@dimen/activity_text_size"
        android:inputType="textPassword"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray"  />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/bind_parent"
        android:textSize="@dimen/activity_text_size"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>

</LinearLayout>
