<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorBlack"
        android:background="@null"
        android:hint="@string/phone"
        android:textSize="@dimen/activity_text_size"
        android:inputType="number"
        tools:ignore="TextFields" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray"  />

    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorBlack"
        android:background="@null"
        android:hint="@string/pwd"
        android:textSize="@dimen/activity_text_size"
        android:inputType="textPassword"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_text_size_small"
            android:text="@string/register"/>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end|center"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_text_size_small"
            android:text="@string/forget_pwd"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/bind_parent"
        android:textSize="@dimen/activity_text_size"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/im_wx_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@mipmap/icon_wx_login"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
