<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_head"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@mipmap/icon_uncheck"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我是宝宝的:"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_text_size"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imv_dad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_check"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dad"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/activity_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imv_mom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_uncheck"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mom"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/activity_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imv_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_uncheck"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/activity_text_size"/>

        </LinearLayout>

    </LinearLayout>

    <com.bearya.robot.household.views.ClearableEditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorBlack"
        android:background="@color/colorViewBg"
        android:padding="5dp"
        android:hint="@string/babyNickName"
        android:textSize="@dimen/activity_text_size" />

    <com.bearya.robot.household.views.ClearableEditText
        android:id="@+id/edt_birth"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorBlack"
        android:background="@color/colorViewBg"
        android:focusable="false"
        android:padding="5dp"
        android:hint="@string/birthday"
        android:textSize="@dimen/activity_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_boy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/boy"
            android:gravity="center"
            android:background="@color/colorSex"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/activity_text_size"/>

        <TextView
            android:id="@+id/tv_girl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/girl"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@color/colorViewBg"
            android:textColor="@color/colorHint"
            android:textSize="@dimen/activity_text_size"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/bind_parent"
        android:textSize="@dimen/activity_text_size"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>
