<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/habit_hint1"
        android:textSize="24dp"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/habit_hint2"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@color/colorBlack"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <com.bearya.robot.household.indicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:visibility="gone"
        app:fillColor="#00acff"
        app:pageColor="#32000000"
        app:strokeWidth="0dp" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@mipmap/bind_parent"
        android:textSize="@dimen/activity_text_size"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>
</LinearLayout>
