<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin_version"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_text_size"
            android:text="@string/versionCode"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:text="v"
            android:textColor="@color/colorTextGray"
            android:textSize="@dimen/activity_text_size_small" />
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:textColor="@color/colorTextGray"
            android:textSize="@dimen/activity_text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorGray"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_text_size"
            android:text="@string/contactUs"/>

        <TextView
            android:id="@+id/tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:text="@string/app_tel"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/activity_text_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/bind_parent_gray"
        android:textSize="@dimen/activity_text_size"
        android:text="@string/loginOut"
        android:textColor="@color/colorTextGray"
        android:gravity="center"/>

</LinearLayout>
